@@ -1,6 +1,11 @@
-FROM openjdk:jre-slim
+FROM openjdk:10-jdk-slim AS build
+COPY . /src
+WORKDIR /src
+RUN ["./gradlew", "build"]
+
+FROM openjdk:10-jre-slim
 ARG version
 EXPOSE 8080
 RUN mkdir -p /app/
-ADD build/libs/gl-item-${version}.jar /app/gl-item.jar
-ENTRYPOINT ["java", "-jar", "/app/gl-item.jar"]
+COPY --from=build /src/build/libs/src-${version}.jar /app/gl-item.jar
+ENTRYPOINT ["java", "-XX:+PrintFlagsFinal", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "/app/gl-item.jar"]
